[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/tiles/tilemap.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/creatures/Slime.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Key.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://materials/standard_color_replace.tres" type="Material" id=5]
[ext_resource path="res://scenes/tiles/danger_tilemap.tres" type="TileSet" id=6]
[ext_resource path="res://sprites/background.png" type="Texture" id=7]
[ext_resource path="res://scenes/levels/Level.gd" type="Script" id=8]
[ext_resource path="res://scenes/tiles/SceneMap.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ScreenShakeCamera.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/key.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/switch_palette.wav" type="AudioStream" id=12]
[ext_resource path="res://materials/Pixellari.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=18]
outline_color = Color( 0.266667, 0.266667, 0.266667, 1 )
font_data = ExtResource( 17 )

[sub_resource type="ShaderMaterial" id=5]

[node name="Level" type="Node2D"]
material = ExtResource( 5 )
script = ExtResource( 8 )
level_palettes = {
0: NodePath("Slime"),
1: NodePath(""),
2: NodePath("")
}
next_level_path = "res://scenes/levels/Level1.tscn"

[node name="KeySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="PaletteSwitchSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ScreenShakeCamera" parent="." instance=ExtResource( 10 )]

[node name="Background" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 128, 128 )
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 256, 256 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
visible = false
margin_right = 256.0
margin_bottom = 256.0
__meta__ = {
"_edit_lock_": true
}

[node name="Message" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.0
margin_top = 35.0
margin_right = 61.0
margin_bottom = 108.0
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 18 )
text = "Message"
align = 1

[node name="TileMap" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 9, 0, 65536, 4, 0, 65551, 3, 0, 131072, 4, 0, 131087, 3, 0, 196608, 4, 0, 196623, 3, 0, 262144, 4, 0, 262159, 3, 0, 327680, 4, 0, 327695, 3, 0, 393216, 4, 0, 393231, 3, 0, 458752, 4, 0, 458767, 3, 0, 524288, 4, 0, 524303, 3, 0, 589824, 4, 0, 589839, 3, 0, 655360, 4, 0, 655375, 3, 0, 720896, 4, 0, 720911, 3, 0, 786432, 4, 0, 786447, 3, 0, 851968, 4, 0, 851983, 3, 0, 917504, 4, 0, 917519, 3, 0, 983040, 11, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 12, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="DangerMap" type="TileMap" parent="." groups=["danger"]]
use_parent_material = true
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_group_": true
}

[node name="SceneMap" parent="." instance=ExtResource( 9 )]

[node name="Door" parent="." instance=ExtResource( 4 )]
position = Vector2( 232, 184 )

[node name="Key" parent="." instance=ExtResource( 3 )]
position = Vector2( -40, 154 )
frame = 0

[node name="Slime" parent="." instance=ExtResource( 2 )]
material = SubResource( 5 )
position = Vector2( 69, 224 )

[connection signal="creature_touched" from="Door" to="." method="_on_Door_creature_touched"]
[connection signal="creature_touched" from="Key" to="." method="_on_Key_creature_touched"]
